# JobRadarAI

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  web-image.yml
config/: markets.toml  profile.toml  secrets.example.env  sources.toml
deploy/k8s/jobradarai-web/: deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
docs/: BEST_PRACTICE_AUDIT.md  CURRENT_STATUS.md  LIVE_AUDIT_2026-05-07.md  LIVE_AUDIT_2026-05-08.md  MARKET_STRATEGY.md  OPERATIONS.md  README.md  SOURCES.md  WEB_PLATFORM.md
scripts/: deploy_web_k8s.ps1  jobspy_fetch.py  lib_web_k8s.ps1  open_dashboard.ps1  pull_web_state.ps1  run_audit.ps1  run_daily.ps1  run_judge.ps1  run_link_check.ps1  run_web.ps1  snapshot_latest.ps1  sync_history.ps1  sync_web_data.ps1
src/jobradai/: __init__.py  __main__.py  audit.py  cli.py  config.py  early_career.py  enrichment.py  exporters.py  fingerprint.py  graduate.py  history.py  http.py  link_check.py  llm_judge.py  models.py  pipeline.py  queries.py  redaction.py  scoring.py  snapshot.py  store.py  text.py  webapp.py
src/jobradai/sources/: ats.py  optional.py  public.py
tests/: test_audit.py  test_early_career.py  test_enrichment.py  test_exporters.py  test_history.py  test_link_check.py  test_llm_judge.py  test_models.py  test_pipeline.py  test_queries.py  test_scoring.py  test_sources.py  test_store.py  test_webapp.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx  styles.css  types.ts
(+6 files in other folders)
